2016-03-19 0.7.0 beta
Minor changes on w32usleep...
Sync with the Windows build.

2016-02-28 0.7.0 beta
RPN pitch bend range handling.
Added an option to disable waiting for remaining voices before stopping.
Documentation...

2016-02-28 0.7.0 beta
Significant sleep precision improvments for Windows.
Also save master volume in configuration file.

2016-01-31 0.7.0 beta
Modify default settings in for Win32.
Initial MIDI mapper stub.

2016-01-30 0.7.0 beta
Add support for a single, persistent fluidsynth instance.
(Experimental, may also break the original mode...)
A little documentaion work...

2016-01-26 0.6.2 beta
Maintaince release.
Use skulpture style dials.
Use QThread::usleep() in Windows to improve sleep precision.

2016-01-16 0.6.2 beta
Stupid RC bug fixes...
Use correct home directory in Windows.

2016-01-15 0.6.2 beta
Fix compatibility with MSVC.
Support for MSVC is still experimental.
Add files for building a debian package (highly experimental).

2016-01-14 0.6.2 beta
Drag 'n' drop.
Do not quit the program when trying to load a unsupported file.

2016-01-13 0.6.2 beta
Hopefully this fixed several critical bugs...

2016-01-10 0.6.2 beta
Minor behavior changes and bug fixes.

2016-01-06 0.6.2 beta
Initial command line parameters handling.
Minor bug fixes.

2016-01-04 0.6.1 alpha
Avoid strange results in channel view.
Fixed several crashes.

2016-01-03 0.6.1 alpha
Initial works on documentation.
Minor bug fixes.

2016-01-03 0.6.0 alpha
Implemented most of the options.
"Render to Wave" is now implemented.
Finished saving & loading playlists.
Fixed several leakage and bugs.

2016-01-02 0.5.1
Now sends SysEx(optional).
Primitive settings implementation(some of the audio tab and the
soundfont tab).

2016-01-01 0.5.0
Bug fixes. Minor code refactoring.
Initial stubs for the settings window.

2015-12-31 0.5.0
Implemented effect parameter editor and file information window.
Bump version.

2015-12-30 primitive version
Implemented the channel parameter editor.
